--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,3 +3,11 @@ db.url = jdbc:mysql://localhost:3306/reminderdb
 db.username = root
 db.password = root
 db.entity.package = com.joulis1derful.remindme.server.entity
+
+db.initialSize = 30
+db.minIdle = 30
+db.maxIdle = 60
+db.timeBetweenEvictionRunsMillis = 30000
+db.minEvictableIdleTimeMillis = 60000
+db.testOnBorrow = true
+db.validationQuery = select version()
